# b23bot

./: Cargo.toml  README.md
src/: main.rs
src/dialogue/: mod.rs
src/dialogue/states/: mod.rs  receive_url_state.rs  start.rs
src/network/: download.rs  mod.rs
